# Images

./: CMakeLists.txt  README.md
src/: image.cpp  image.hpp  image_buffer.cpp  image_buffer.hpp  image_decoder.hpp  image_encoder.hpp  image_enum.hpp  image_exceptions.hpp
src/bmp/: bmp.cpp  bmp.hpp
src/qoi/: qoi.cpp  qoi.hpp
tests/: CMakeLists.txt  image_compare.cpp
tests/images/: X.qoi
